--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".GameActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".GameActivity"
-            android:label="@string/title_activity_game" >
-        </activity>
+        <!--<activity-->
+            <!--android:name=".GameActivity"-->
+            <!--android:label="@string/title_activity_game" >-->
+        <!--</activity>-->
         <activity
             android:name=".QuestionActivity"
             android:label="@string/title_activity_question" >
